--- a/src/styles/layout/variable.less
+++ b/src/styles/layout/variable.less
@@ -1,14 +1,23 @@
 // viewport
 @max-sm: 575px;
-@min-sm: 576px;
+@min-sm: 575px;
 
-@max-md: 767px;
+@max-md: 768px;
 @min-md: 768px;
 
-@max-lg: 989px;
+@max-lg: 990px;
 @min-lg: 990px;
 
-@max-xl: 1200px;
-@min-xl: 1201px;
+@max-xl: 1280px;
+@min-xl: 1280px;
 
-@min-xxl: 1920px;
+// colors
+@primary: #09A5F0;
+@accent: #F09A18;
+@text: #0A051E;
+
+// css variable
+:root {
+	--transition-duration: 250ms;
+	--transition-function: ease-in-out;
+}
