--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1,2 +1,7 @@
 @import './layout/variable.less';
+@import './layout/fonts.less';
 @import './layout/scaffolding.less';
+@import './blocks/header.less';
+@import './blocks/logo.less';
+@import './blocks/nav.less';
+@import './blocks/button.less';
