--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -1,6 +1,9 @@
 doctype html
 html(lang="en")
 	head
+		//  удалить
+		meta(name='robots', content='noindex, nofollow')
+		//  удалить
 		meta(charset="UTF-8")
 		meta(http-equiv="X-UA-Compatible", content="IE=edge")
 		meta(name="viewport", content="width=device-width, initial-scale=1.0")
@@ -28,3 +31,8 @@ html(lang="en")
 						a(href="#form") Контакты
 
 				a.nav__button.button(href="#") Присоединиться
+
+	main.main
+		section#about.about
+			.container
+				.inner
