делает about без декоративной графики

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -34,5 +34,8 @@ html(lang="en")
 
 	main.main
 		section#about.about
-			.container
-				.inner
+			.about__container
+				.about__inner
+					h1.heading Quantum #[span.bg-line Team]
+					p Медиабаинговая команда с выдающимися показателями, динамичным ростом, мощным финансовым потоком и большой группой экспертов в iGaming.
+					a.about__button.button.button--primary(href="#form") Стать частью команды
