--- a/src/styles/blocks/nav.less
+++ b/src/styles/blocks/nav.less
@@ -44,4 +44,11 @@
 .nav__button {
 	display: block;
 	margin-left: 15px;
+	padding: 12px 15px;
+
+	@media (min-width: @min-lg) {
+		padding: 15px 19px;
+		font-size: 14px;
+		line-height: 18px;
+	}
 }
