--- a/src/styles/layout/scaffolding.less
+++ b/src/styles/layout/scaffolding.less
@@ -23,12 +23,13 @@ img {
 }
 
 [class*="container"] {
-	max-width: 1280px;
+	max-width: 1032px;
 	margin-right: auto;
 	margin-left: auto;
 }
 
 [class*="inner"] {
+	box-sizing: border-box;
 	padding-right: 16px;
 	padding-left: 16px;
 }
