--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1,7 +1,9 @@
 @import './layout/variable.less';
 @import './layout/fonts.less';
 @import './layout/scaffolding.less';
-@import './blocks/header.less';
-@import './blocks/logo.less';
-@import './blocks/nav.less';
 @import './blocks/button.less';
+@import './blocks/heading.less';
+@import './blocks/logo.less';
+@import './blocks/header.less';
+@import './blocks/nav.less';
+@import './blocks/about.less';
