--- a/src/styles/blocks/button.less
+++ b/src/styles/blocks/button.less
@@ -1,15 +1,18 @@
 .button {
 	display: inline-block;
-	padding: 12px 15px;
+	box-sizing: border-box;
+	padding: 22px 15px;
 	font-weight: 700;
 	font-size: 10px;
 	line-height: 13px;
 	font-family: inherit;
+	text-align: center;
 	color: #09A5F0;
 	text-transform: uppercase;
 	text-decoration: none;
 	letter-spacing: 0.05em;
 	background-color: transparent;
+	border: 0;
 	border: 1px solid #09A5F0;
 	border-radius: 8px;
 	transition: background-color var(--transition-duration) var(--transition-function),
@@ -18,13 +21,24 @@
 	appearance: none;
 
 	@media (min-width: @min-lg) {
-		padding: 15px 19px;
-		font-size: 14px;
-		line-height: 18px;
+		padding: 25px 40px;
+		font-size: 20px;
+		line-height: 26px;
 	}
+}
+
+.button--primary {
+	color: #ffffff;
+	background-color: @primary;
+	box-shadow: 0px 8px 40px #09A5F0;
+
 }
 
 .button:hover {
 	color: #ffffff;
 	background-color: @primary;
+}
+
+.button--primary:hover {
+	box-shadow: 0 0 0 transparent;
 }
