--- a/src/styles/blocks/header.less
+++ b/src/styles/blocks/header.less
@@ -1,3 +1,8 @@
+.header {
+	position: relative;
+	background-color: #ffffff;
+}
+
 .header__inner {
 	display: flex;
 	justify-content: space-between;
