--- a/src/styles/layout/scaffolding.less
+++ b/src/styles/layout/scaffolding.less
@@ -5,6 +5,7 @@ body {
 	line-height: 150%;
 	font-family: 'IBM Plex Sans', Roboto, Arial, Helvetica, sans-serif;
 	color: @text;
+	margin-bottom: 1000px;
 }
 
 img {
