--- a/src/styles/blocks/nav.less
+++ b/src/styles/blocks/nav.less
@@ -45,6 +45,8 @@
 	display: block;
 	margin-left: 15px;
 	padding: 12px 15px;
+	font-size: 10px;
+	line-height: 13px;
 
 	@media (min-width: @min-lg) {
 		padding: 15px 19px;
