добавляет блок advantages

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -33,9 +33,34 @@ html(lang="en")
 				a.nav__button.button(href="#") Присоединиться
 
 	main.main
+		h1.visually-hidden About us
 		section#about.about
 			.about__container
 				.about__inner
-					h1.heading Quantum #[span.bg-line Team]
+					h2.heading Quantum #[span.bg-line Team]
 					p Медиабаинговая команда с выдающимися показателями, динамичным ростом, мощным финансовым потоком и большой группой экспертов в iGaming.
 					a.about__button.button.button--primary(href="#form") Стать частью команды
+		section#advantages.advantages
+			.advantages__container
+				.advantages__inner
+					h2.heading #[span.bg-line Преимущества] Quantum Team
+
+					ul.advantages__list
+						li
+							img(src="img/advantages/advantages-1.svg", alt="#", aria-hidden="true", width="60", height="58", loading="lazy")
+							| Работаем с топовыми вертикалями: гемблинг, беттинг, нутра
+						li
+							img(src="img/advantages/advantages-2.svg", alt="#", aria-hidden="true", width="61", height="62", loading="lazy")
+							| Используем самые эффективные источники трафика: Facebook и Google
+						li
+							img(src="img/advantages/advantages-3.svg", alt="#", aria-hidden="true", width="64", height="56", loading="lazy")
+							| Больше 10 лет успешной работы и внедрения уникальных функций, качественного контента и продвижения
+						li
+							img(src="img/advantages/advantages-4.svg", alt="#", aria-hidden="true", width="60", height="65", loading="lazy")
+							| Автоматизированы рутинные процессы, настроены готовые схемы, поэтому мы так быстро растём в трафик-объёме и прибыли
+						li
+							img(src="img/advantages/advantages-5.svg", alt="#", aria-hidden="true", width="69", height="63", loading="lazy")
+							| Слаженная работа, наличие расходников и доступ к лучшим ставкам в партнёрках дают возможность зарабатывать больше, чем в других командах
+						li
+							img(src="img/advantages/advantages-6.svg", alt="#", aria-hidden="true", width="62", height="64", loading="lazy")
+							| Рост был и остаётся нашей ключевой задачей, поэтому у нас прозрачные и дружеские отношения в команде
