делает блок work

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -37,13 +37,13 @@ html(lang="en")
 		section#about.about
 			.about__container
 				.about__inner
-					h2.heading Quantum #[span.bg-line Team]
+					h2.heading Quantum #[span.heading-line Team]
 					p Медиабаинговая команда с выдающимися показателями, динамичным ростом, мощным финансовым потоком и большой группой экспертов в iGaming.
 					a.about__button.button.button--primary(href="#form") Стать частью команды
 		section#advantages.advantages
 			.advantages__container
 				.advantages__inner
-					h2.heading #[span.bg-line Преимущества] Quantum Team
+					h2.heading #[span.heading-line Преимущества] Quantum Team
 
 					ul.advantages__list
 						li
@@ -64,3 +64,29 @@ html(lang="en")
 						li
 							img(src="img/advantages/advantages-6.svg", alt="#", aria-hidden="true", width="62", height="64", loading="lazy")
 							| Рост был и остаётся нашей ключевой задачей, поэтому у нас прозрачные и дружеские отношения в команде
+		section#work.work
+			.work__container
+				.work__inner
+					h2.heading Quantum Team: #[span.heading-line всегда] в движении
+
+					ul.work__list
+						li
+							h3.work__title
+								img(src="./img/work/work-1.jpg", alt="#", aria-hidden="true", width="188", height="120", loading="lazy")
+								span Фарм-отдел
+							p Большой отдел профессионалов с уверенной экспертизой и аналитикой, которые удовлетворят все потребности по аккаунтам. Тщательно подготавливаем сетапы из аккаунтов «Фейсбука» для запуска, тестируем и выявляем рабочие.
+						li
+							h3.work__title
+								img(src="./img/work/work-2.jpg", alt="#", aria-hidden="true", width="188", height="120", loading="lazy")
+								span Разработка приложений
+							p Занимаемся созданием web-view приложений на базе iOS и Android. Большая опытная команда разработки со своей уникальной экспертизой.
+						li
+							h3.work__title
+								img(src="./img/work/work-3.jpg", alt="#", aria-hidden="true", width="188", height="120", loading="lazy")
+								span Креативный отдел
+							p Собственный департамент моушн-дизайна. Наши графические дизайнеры способны воплотить в реальность любую идею.
+						li
+							h3.work__title
+								img(src="./img/work/work-4.jpg", alt="#", aria-hidden="true", width="188", height="120", loading="lazy")
+								span Трафик
+							p Собственный отдел профессиональных медиабайеров, работающий по всем направлениям с большими объёмами. Работаем с вертикалями гемблинга, беттинга, нутры и при помощи «Фейсбука», «Гугла» генерируем огромное количество трафика.
