делает блок юjobopenings

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -90,3 +90,20 @@ html(lang="en")
 								img(src="./img/work/work-4.jpg", alt="#", aria-hidden="true", width="188", height="120", loading="lazy")
 								span Трафик
 							p Собственный отдел профессиональных медиабайеров, работающий по всем направлениям с большими объёмами. Работаем с вертикалями гемблинга, беттинга, нутры и при помощи «Фейсбука», «Гугла» генерируем огромное количество трафика.
+		section#jobopenings.jobopenings
+			.jobopenings__container
+				.jobopenings__inner
+					h2.heading.text-center Стань частицей одной большой #[span.heading-line команды!]
+					p.text-center Мы ищем командных игроков с креативностью и видением. Тех, чьё сердце бьётся за инновации и движ в цифровом мире. Если хочешь вместе с нами формировать будущее в iGaming и создавать исключительные продукты в медиабаинговой среде, мы приглашаем присоединиться к нашей команде.
+					ul.jobopenings__list
+						li Арбитражники
+						li Тимлидерыв CPA-лидогенерации
+						li Разработчики
+						li Медиабайеры
+						li Моушн-дизайнеры
+						li Фармеры
+						li Директологи
+						li Трафик-менеджеры
+					.jobopenings__button-wrap
+						p Не нашёл себя в списке вакансий? Quantum Team открыт для единомышленников и партнёров)
+						a.jobopenings__button.button(href="#form") Стать частью команды
