--- a/src/styles/blocks/work.less
+++ b/src/styles/blocks/work.less
@@ -1,6 +1,11 @@
 .work {
 	text-align: center;
 
+	@media (min-width: @min-xl) {
+		position: relative;
+		z-index: 0;
+	}
+
 	h2 {
 		margin-top: 0;
 		margin-bottom: 30px;
