--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -9,3 +9,4 @@
 @import './blocks/about.less';
 @import './blocks/advantages.less';
 @import './blocks/work.less';
+@import './blocks/jobopenings.less';
