--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -10,3 +10,5 @@
 @import './blocks/advantages.less';
 @import './blocks/work.less';
 @import './blocks/jobopenings.less';
+@import './blocks/form.less';
+@import './blocks/social.less';
