--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -143,3 +143,12 @@ html(lang="en")
 								li
 									a.social__link.social__link--facebook(href="#")
 										span.visually-hidden facebook
+	footer.footer
+		.footer__container
+			.footer__inner
+				a.footer__logo.logo(href="#")
+					img(src="./img/logo-footer.svg", alt="logo")
+				.footer__content
+					p © 2023–2026 Quantum Team™
+					a(href="#") Политика конфиденциальности
+					a(href="#") Правовая информация
