--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -12,3 +12,4 @@
 @import './blocks/jobopenings.less';
 @import './blocks/form.less';
 @import './blocks/social.less';
+@import './blocks/footer.less';
