kztn мелкие баги

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -12,147 +12,147 @@ html(lang="en")
 		link(rel="stylesheet", href="styles/main.css")
 	body
 
-	header.header
-		.header__container
-			nav.header__nav.nav.header__inner
-				a.nav__logo.logo(href="./", aria-current="page")
-					img(src="./img/logo.svg", alt="Quantum Team", width="118", height="32")
+		header.header
+			.header__container
+				nav.header__nav.nav.header__inner
+					a.nav__logo.logo(href="./", aria-current="page")
+						img(src="./img/logo.svg", alt="Quantum Team", width="118", height="32")
 
-				ul.nav__list
-					li
-						a(href="#about") О нас
-					li
-						a(href="#advantages") Преимущества
-					li
-						a(href="#work") Наша работа
-					li
-						a(href="#jobopenings") Вакансии
-					li
-						a(href="#form") Контакты
+					ul.nav__list
+						li
+							a(href="#about") О нас
+						li
+							a(href="#advantages") Преимущества
+						li
+							a(href="#work") Наша работа
+						li
+							a(href="#jobopenings") Вакансии
+						li
+							a(href="#form") Контакты
 
-				a.nav__button.button(href="#") Присоединиться
+					a.nav__button.button(href="#") Присоединиться
 
-	main.main
-		h1.visually-hidden About us
-		section#about.about
-			.about__container
-				.about__inner
-					h2.heading Quantum #[span.heading-line Team]
-					p Медиабаинговая команда с выдающимися показателями, динамичным ростом, мощным финансовым потоком и большой группой экспертов в iGaming.
-					a.about__button.button.button--primary(href="#form") Стать частью команды
-		section#advantages.advantages
-			.advantages__container
-				.advantages__inner
-					h2.heading #[span.heading-line Преимущества] Quantum Team
+		main.main
+			h1.visually-hidden About us
+			section#about.about
+				.about__container
+					.about__inner
+						h2.heading Quantum #[span.heading-line Team]
+						p Медиабаинговая команда с выдающимися показателями, динамичным ростом, мощным финансовым потоком и большой группой экспертов в iGaming.
+						a.about__button.button.button--primary(href="#form") Стать частью команды
+			section#advantages.advantages
+				.advantages__container
+					.advantages__inner
+						h2.heading #[span.heading-line Преимущества] Quantum Team
 
-					ul.advantages__list
-						li
-							img(src="img/advantages/advantages-1.svg", alt="#", aria-hidden="true", width="60", height="58", loading="lazy")
-							| Работаем с топовыми вертикалями: гемблинг, беттинг, нутра
-						li
-							img(src="img/advantages/advantages-2.svg", alt="#", aria-hidden="true", width="61", height="62", loading="lazy")
-							| Используем самые эффективные источники трафика: Facebook и Google
-						li
-							img(src="img/advantages/advantages-3.svg", alt="#", aria-hidden="true", width="64", height="56", loading="lazy")
-							| Больше 10 лет успешной работы и внедрения уникальных функций, качественного контента и продвижения
-						li
-							img(src="img/advantages/advantages-4.svg", alt="#", aria-hidden="true", width="60", height="65", loading="lazy")
-							| Автоматизированы рутинные процессы, настроены готовые схемы, поэтому мы так быстро растём в трафик-объёме и прибыли
-						li
-							img(src="img/advantages/advantages-5.svg", alt="#", aria-hidden="true", width="69", height="63", loading="lazy")
-							| Слаженная работа, наличие расходников и доступ к лучшим ставкам в партнёрках дают возможность зарабатывать больше, чем в других командах
-						li
-							img(src="img/advantages/advantages-6.svg", alt="#", aria-hidden="true", width="62", height="64", loading="lazy")
-							| Рост был и остаётся нашей ключевой задачей, поэтому у нас прозрачные и дружеские отношения в команде
-		section#work.work
-			.work__container
-				.work__inner
-					h2.heading Quantum Team: #[span.heading-line всегда] в движении
+						ul.advantages__list
+							li
+								img(src="img/advantages/advantages-1.svg", alt="#", aria-hidden="true", width="60", height="58", loading="lazy")
+								| Работаем с топовыми вертикалями: гемблинг, беттинг, нутра
+							li
+								img(src="img/advantages/advantages-2.svg", alt="#", aria-hidden="true", width="61", height="62", loading="lazy")
+								| Используем самые эффективные источники трафика: Facebook и Google
+							li
+								img(src="img/advantages/advantages-3.svg", alt="#", aria-hidden="true", width="64", height="56", loading="lazy")
+								| Больше 10 лет успешной работы и внедрения уникальных функций, качественного контента и продвижения
+							li
+								img(src="img/advantages/advantages-4.svg", alt="#", aria-hidden="true", width="60", height="65", loading="lazy")
+								| Автоматизированы рутинные процессы, настроены готовые схемы, поэтому мы так быстро растём в трафик-объёме и прибыли
+							li
+								img(src="img/advantages/advantages-5.svg", alt="#", aria-hidden="true", width="69", height="63", loading="lazy")
+								| Слаженная работа, наличие расходников и доступ к лучшим ставкам в партнёрках дают возможность зарабатывать больше, чем в других командах
+							li
+								img(src="img/advantages/advantages-6.svg", alt="#", aria-hidden="true", width="62", height="64", loading="lazy")
+								| Рост был и остаётся нашей ключевой задачей, поэтому у нас прозрачные и дружеские отношения в команде
+			section#work.work
+				.work__container
+					.work__inner
+						h2.heading Quantum Team: #[span.heading-line всегда] в движении
 
-					ul.work__list
-						li
-							h3.work__title
-								img(src="./img/work/work-1.jpg", alt="#", aria-hidden="true", width="188", height="120", loading="lazy")
-								span Фарм-отдел
-							p Большой отдел профессионалов с уверенной экспертизой и аналитикой, которые удовлетворят все потребности по аккаунтам. Тщательно подготавливаем сетапы из аккаунтов «Фейсбука» для запуска, тестируем и выявляем рабочие.
-						li
-							h3.work__title
-								img(src="./img/work/work-2.jpg", alt="#", aria-hidden="true", width="188", height="120", loading="lazy")
-								span Разработка приложений
-							p Занимаемся созданием web-view приложений на базе iOS и Android. Большая опытная команда разработки со своей уникальной экспертизой.
-						li
-							h3.work__title
-								img(src="./img/work/work-3.jpg", alt="#", aria-hidden="true", width="188", height="120", loading="lazy")
-								span Креативный отдел
-							p Собственный департамент моушн-дизайна. Наши графические дизайнеры способны воплотить в реальность любую идею.
-						li
-							h3.work__title
-								img(src="./img/work/work-4.jpg", alt="#", aria-hidden="true", width="188", height="120", loading="lazy")
-								span Трафик
-							p Собственный отдел профессиональных медиабайеров, работающий по всем направлениям с большими объёмами. Работаем с вертикалями гемблинга, беттинга, нутры и при помощи «Фейсбука», «Гугла» генерируем огромное количество трафика.
-		section#jobopenings.jobopenings
-			.jobopenings__container
-				.jobopenings__inner
-					h2.heading.text-center Стань частицей одной большой #[span.heading-line команды!]
-					p.text-center Мы ищем командных игроков с креативностью и видением. Тех, чьё сердце бьётся за инновации и движ в цифровом мире. Если хочешь вместе с нами формировать будущее в iGaming и создавать исключительные продукты в медиабаинговой среде, мы приглашаем присоединиться к нашей команде.
-					ul.jobopenings__list
-						li Арбитражники
-						li Тимлидерыв CPA-лидогенерации
-						li Разработчики
-						li Медиабайеры
-						li Моушн-дизайнеры
-						li Фармеры
-						li Директологи
-						li Трафик-менеджеры
-					.jobopenings__button-wrap
-						p Не нашёл себя в списке вакансий? Quantum Team открыт для единомышленников и партнёров)
-						a.jobopenings__button.button(href="#form") Стать частью команды
-		section#form.form
-			.form__container
-				.form__inner
-					h2.heading
-						span.heading-line Контакты
-					p Quantum Team — главная частица медиабаингового мира с полным спектром инструментов. Мы объединяем лучших и помогаем развиваться каждому.
-					p Хочешь развиваться профессионально и финансово? Напиши нам и присоединяйся!
-					.form__wrap
-						form.form__form(action="#")
-							label.form__label
-								span Имя
-								input.form__input(type="text", placeholder="Имя")
-							label.form__label
-								span Электронная почта
-								input.form__input(type="email", placeholder="Электронная почта")
-							label.form__label
-								span Телефон
-								input.form__input(type="tel", placeholder="Телефон")
-							label.form__label
-								span Комментарий
-								textarea.form__input.form__textarea.js-textarea(rows="1", placeholder="Комментарий")
-								.for_textarea
+						ul.work__list
+							li
+								h3.work__title
+									img(src="./img/work/work-1.jpg", alt="#", aria-hidden="true", width="188", height="120", loading="lazy")
+									span Фарм-отдел
+								p Большой отдел профессионалов с уверенной экспертизой и аналитикой, которые удовлетворят все потребности по аккаунтам. Тщательно подготавливаем сетапы из аккаунтов «Фейсбука» для запуска, тестируем и выявляем рабочие.
+							li
+								h3.work__title
+									img(src="./img/work/work-2.jpg", alt="#", aria-hidden="true", width="188", height="120", loading="lazy")
+									span Разработка приложений
+								p Занимаемся созданием web-view приложений на базе iOS и Android. Большая опытная команда разработки со своей уникальной экспертизой.
+							li
+								h3.work__title
+									img(src="./img/work/work-3.jpg", alt="#", aria-hidden="true", width="188", height="120", loading="lazy")
+									span Креативный отдел
+								p Собственный департамент моушн-дизайна. Наши графические дизайнеры способны воплотить в реальность любую идею.
+							li
+								h3.work__title
+									img(src="./img/work/work-4.jpg", alt="#", aria-hidden="true", width="188", height="120", loading="lazy")
+									span Трафик
+								p Собственный отдел профессиональных медиабайеров, работающий по всем направлениям с большими объёмами. Работаем с вертикалями гемблинга, беттинга, нутры и при помощи «Фейсбука», «Гугла» генерируем огромное количество трафика.
+			section#jobopenings.jobopenings
+				.jobopenings__container
+					.jobopenings__inner
+						h2.heading.text-center Стань частицей одной большой #[span.heading-line команды!]
+						p.text-center Мы ищем командных игроков с креативностью и видением. Тех, чьё сердце бьётся за инновации и движ в цифровом мире. Если хочешь вместе с нами формировать будущее в iGaming и создавать исключительные продукты в медиабаинговой среде, мы приглашаем присоединиться к нашей команде.
+						ul.jobopenings__list
+							li Арбитражники
+							li Тимлидерыв CPA-лидогенерации
+							li Разработчики
+							li Медиабайеры
+							li Моушн-дизайнеры
+							li Фармеры
+							li Директологи
+							li Трафик-менеджеры
+						.jobopenings__button-wrap
+							p Не нашёл себя в списке вакансий? Quantum Team открыт для единомышленников и партнёров)
+							a.jobopenings__button.button(href="#form") Стать частью команды
+			section#form.form
+				.form__container
+					.form__inner
+						h2.heading
+							span.heading-line Контакты
+						p Quantum Team — главная частица медиабаингового мира с полным спектром инструментов. Мы объединяем лучших и помогаем развиваться каждому.
+						p Хочешь развиваться профессионально и финансово? Напиши нам и присоединяйся!
+						.form__wrap
+							form.form__form(action="#")
+								label.form__label
+									span.form__label-view Имя
+									input.form__input(type="text", placeholder="Имя")
+								label.form__label
+									span.form__label-view Электронная почта
+									input.form__input(type="email", placeholder="Электронная почта")
+								label.form__label
+									span.form__label-view Телефон
+									input.form__input(type="tel", placeholder="Телефон")
+								label.form__label
+									span.form__label-view Комментарий
+									textarea.form__input.form__textarea.js-textarea(rows="1", placeholder="Комментарий")
+									span.for-textarea
 
-							button.form__button.button.button--primary(type="submit") Отправить
-						.form__social.social
-							ul.social__list
-								li
-									a.social__link.social__link--mail(href="#")
-										span.visually-hidden mail
-								li
-									a.social__link.social__link--instagram(href="#")
-										span.visually-hidden instagram
-								li
-									a.social__link.social__link--telegram(href="#")
-										span.visually-hidden telegram
-								li
-									a.social__link.social__link--facebook(href="#")
-										span.visually-hidden facebook
-	footer.footer
-		.footer__container
-			.footer__inner
-				a.footer__logo.logo(href="#")
-					img(src="./img/logo-footer.svg", alt="logo")
-				.footer__content
-					p © 2023–2026 Quantum Team™
-					a(href="#") Политика конфиденциальности
-					a(href="#") Правовая информация
-	script
-		include ../../dest/scripts/main.min.js
+								button.form__button.button.button--primary(type="submit") Отправить
+							.form__social.social
+								ul.social__list
+									li
+										a.social__link.social__link--mail(href="#")
+											span.visually-hidden mail
+									li
+										a.social__link.social__link--instagram(href="#")
+											span.visually-hidden instagram
+									li
+										a.social__link.social__link--telegram(href="#")
+											span.visually-hidden telegram
+									li
+										a.social__link.social__link--facebook(href="#")
+											span.visually-hidden facebook
+		footer.footer
+			.footer__container
+				.footer__inner
+					a.footer__logo.logo(href="#")
+						img(src="./img/logo-footer.svg", alt="logo")
+					.footer__content
+						p © 2023–2026 Quantum Team™
+						a(href="#") Политика конфиденциальности
+						a(href="#") Правовая информация
+		script
+			include ../../dest/scripts/main.min.js
