--- a/src/styles/blocks/form.less
+++ b/src/styles/blocks/form.less
@@ -70,7 +70,7 @@
 	}
 }
 
-.form__label span {
+.form__label .form__label-view {
 	position: absolute;
 	top: 0;
 	left: 22px;
@@ -92,7 +92,7 @@
 	}
 }
 
-.for_textarea {
+.for-textarea {
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -102,10 +102,11 @@
 	width: 100%;
 	height: auto;
 	min-height: 40px;
+	margin: 0;
 	word-break: break-all;
 	opacity: 0;
-	pointer-events: none;
 	user-select: none;
+	pointer-events: none;
 }
 
 textarea.form__input {
@@ -114,7 +115,7 @@ textarea.form__input {
 	transition: height var(--transition-duration) var(--transition-function);
 }
 
-.for_textarea,
+.for-textarea,
 .form__input {
 	box-sizing: border-box;
 	width: 100%;
@@ -158,7 +159,7 @@ textarea.form__input {
 	}
 }
 
-.form__label:focus-within span {
+.form__label:focus-within .form__label-view {
 	opacity: 1;
 }
 
@@ -176,11 +177,10 @@ textarea.form__input {
 			grid-row-start: 1;
 			width: 100%;
 			max-width: 483px;
-			background: #D9D9D9;
 			background-image: url(../../img/form/form.jpg);
 			background-repeat: no-repeat;
-			background-position: center;
-			background-size: cover;
+			background-position: center top;
+			background-size: contain;
 			border-radius: 24px;
 
 			@media (min-width: @min-xl) {
